# gmock-sample

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.rst
src/: notification_manager.cpp  notification_manager.hpp  phone_book.cpp  phone_book.hpp
test/: CMakeLists.txt  notification_manager_test.cpp  phone_book_test.cpp
